# skyedge_vtol

./: README.md
skyedge_vtol/: README.md
skyedge_vtol/docs/: 01_PROJECT_OVERVIEW.md  02_BUILD_AND_RUN.md  03_FEATURES_AND_NODES.md  04_PM_AND_TEAM.md  05_ROADMAP.md  ARCHITECTURE.md  README.md  ROADMAP_TO_SEPTEMBER.md  UBUNTU_SETUP.md
skyedge_vtol/management/: PM_ORDERS.md  TEAM_ROLES.md  WEEK1_ACTION_PLAN.md
skyedge_vtol/scripts/: build_workspace.sh  install_ubuntu.sh  run_sim.sh
skyedge_vtol/src/vtol_core/: guidance_node.py  messages.py  mission_manager_node.py  package.xml  safety_manager.py  setup.cfg  setup.py  state_defs.py
skyedge_vtol/src/vtol_core/config/: global_params.yaml
skyedge_vtol/src/vtol_core/launch/: real_launch.py  sim_launch.py
skyedge_vtol/src/vtol_core/vtol_core/: px4_bridge_node.py
skyedge_vtol/src/vtol_vision/: aruco_detector_node.py  package.xml  setup.cfg  setup.py
skyedge_vtol/src/vtol_vision/vtol_vision/: line_tracker_node.py
