<?xml version="1.0"?>
<package format="3">
  <name>vtol_core</name>
  <version>0.1.0</version>
  <description>VTOL mission core for competition</description>
  <maintainer email="team@example.com">SkyEdge Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
