<?xml version="1.0"?>
<package format="3">
  <name>vtol_vision</name>
  <version>0.1.0</version>
  <description>VTOL vision nodes</description>
  <maintainer email="team@example.com">SkyEdge Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
